[gd_scene load_steps=35 format=3 uid="uid://dpreubai0v75h"]

[ext_resource type="Script" uid="uid://c7yjwhgviw6cl" path="res://scripts/gd/Bar_system.gd" id="1_yiyad"]
[ext_resource type="Shader" uid="uid://daysprlu7bpyr" path="res://scripts/gdshader/NULL_progress_bar.gdshader" id="2_53byl"]
[ext_resource type="Texture2D" uid="uid://1hvah5xpvfsk" path="res://assets/sprite/UI/Null_Mater.png" id="3_ffwmv"]
[ext_resource type="Script" uid="uid://b2mk5lu1vu5mp" path="res://scripts/gd/autosizer.gd" id="3_fw8gm"]
[ext_resource type="Texture2D" uid="uid://bjlhludno8sn0" path="res://assets/sprite/UI/Name_plate.png" id="3_jh2vi"]
[ext_resource type="Texture2D" uid="uid://c18t041tumpk" path="res://assets/sprite/UI/Health_BG.png" id="4_f2i6m"]
[ext_resource type="Shader" uid="uid://ckhvlyetwr75x" path="res://scripts/gdshader/hp_segmented_progress_bar.gdshader" id="4_memqs"]
[ext_resource type="Texture2D" uid="uid://b2wefr147ijth" path="res://assets/sprite/UI/Energy_BG.png" id="5_85v0h"]
[ext_resource type="Texture2D" uid="uid://dgfwcx18fjk51" path="res://assets/sprite/UI/HP_Mater.png" id="5_c8uri"]
[ext_resource type="Shader" uid="uid://ctxyivki7n00q" path="res://scripts/gdshader/eng_segmented_progress_bar.gdshader" id="6_7o4wy"]
[ext_resource type="Texture2D" uid="uid://b85sqqa3k7vur" path="res://assets/sprite/UI/ENG_Mater.png" id="7_lbdh6"]
[ext_resource type="Texture2D" uid="uid://dp3m8pm7j520r" path="res://assets/sprite/UI/Bar_border.png" id="8_ecgt7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mrgcl"]
texture = ExtResource("3_jh2vi")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sqfns"]
texture = ExtResource("4_f2i6m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pitqy"]
texture = ExtResource("5_85v0h")

[sub_resource type="Gradient" id="Gradient_usdmt"]
colors = PackedColorArray(0.0509804, 0.0509804, 0.0509804, 1, 0.0509804, 0.0509804, 0.0509804, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_863n2"]
gradient = SubResource("Gradient_usdmt")

[sub_resource type="Gradient" id="Gradient_uru2j"]
colors = PackedColorArray(0.04, 0.04, 0.04, 0.588235, 0.06, 0.06, 0.06, 0.588235)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5kma6"]
gradient = SubResource("Gradient_uru2j")
fill_from = Vector2(0.543011, 0.543011)
fill_to = Vector2(0.537634, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_amyoh"]
resource_local_to_scene = true
shader = ExtResource("2_53byl")
shader_parameter/stepify = true
shader_parameter/value = 1.0
shader_parameter/count = 1
shader_parameter/margin = Vector2(0, 0)
shader_parameter/shear_angle = 0.0
shader_parameter/gradient_x = SubResource("GradientTexture2D_863n2")
shader_parameter/gradient_y = SubResource("GradientTexture2D_5kma6")
shader_parameter/use_value_gradient = false
shader_parameter/invert = false

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2lp16"]
texture = ExtResource("3_ffwmv")

[sub_resource type="Gradient" id="Gradient_mchuc"]
colors = PackedColorArray(0.890196, 0.235294, 0.160784, 1, 0.890196, 0.235294, 0.160784, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kjh8r"]
gradient = SubResource("Gradient_mchuc")

[sub_resource type="Gradient" id="Gradient_dcg5r"]
colors = PackedColorArray(0.7, 0.1204, 0.056, 0.784314, 0.91, 0.35308, 0.2912, 0.588235)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xn2i6"]
gradient = SubResource("Gradient_dcg5r")
fill_from = Vector2(0.505376, 0.672043)
fill_to = Vector2(0.526882, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_04twu"]
resource_local_to_scene = true
shader = ExtResource("4_memqs")
shader_parameter/stepify = true
shader_parameter/value = 0.0
shader_parameter/count = 20
shader_parameter/margin = Vector2(0.28, 0)
shader_parameter/shear_angle = 0.0
shader_parameter/gradient_x = SubResource("GradientTexture2D_kjh8r")
shader_parameter/gradient_y = SubResource("GradientTexture2D_xn2i6")
shader_parameter/use_value_gradient = false
shader_parameter/invert = false

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y2lb1"]
texture = ExtResource("5_c8uri")

[sub_resource type="Gradient" id="Gradient_bqwyj"]
colors = PackedColorArray(0.207843, 0.890196, 0.160784, 1, 0.207843, 0.890196, 0.160784, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lgqhl"]
gradient = SubResource("Gradient_bqwyj")

[sub_resource type="Gradient" id="Gradient_vwbua"]
colors = PackedColorArray(0.0989333, 0.7, 0.056, 0.784314, 0.332453, 0.91, 0.2912, 0.588235)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i1bxa"]
gradient = SubResource("Gradient_vwbua")
fill_from = Vector2(0.494624, 0.66129)
fill_to = Vector2(0.483871, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n7j5l"]
resource_local_to_scene = true
shader = ExtResource("6_7o4wy")
shader_parameter/stepify = true
shader_parameter/value = 0.0
shader_parameter/count = 30
shader_parameter/margin = Vector2(0.4, 0)
shader_parameter/shear_angle = 0.0
shader_parameter/gradient_x = SubResource("GradientTexture2D_lgqhl")
shader_parameter/gradient_y = SubResource("GradientTexture2D_i1bxa")
shader_parameter/use_value_gradient = false
shader_parameter/invert = false

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_anayf"]
texture = ExtResource("7_lbdh6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k6ur1"]
texture = ExtResource("8_ecgt7")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[node name="Bar_system" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 49.0
offset_top = 43.0
offset_right = 49.0
offset_bottom = 43.0
script = ExtResource("1_yiyad")

[node name="Name_tab" type="Panel" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = -24.0
offset_right = 132.0
offset_bottom = 6.0
theme_override_styles/panel = SubResource("StyleBoxTexture_mrgcl")

[node name="Label" type="Label" parent="Name_tab"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.5
offset_top = 2.0
offset_right = 49.5
offset_bottom = 25.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.53, 0.0901, 0.0901, 1)
theme_override_font_sizes/font_size = 13
text = "Little Guy"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
script = ExtResource("3_fw8gm")

[node name="Health" type="Panel" parent="."]
layout_mode = 0
offset_left = 147.0
offset_top = -30.0
offset_right = 227.0
offset_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxTexture_sqfns")

[node name="Label" type="Label" parent="Health"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -49.5
offset_top = -23.0
offset_right = 49.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0.53, 0.0901, 0.0901, 1)
theme_override_font_sizes/font_size = 15
text = "25|25"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
script = ExtResource("3_fw8gm")

[node name="Energy" type="Panel" parent="."]
layout_mode = 0
offset_left = 238.0
offset_top = -34.0
offset_right = 331.0
offset_bottom = 2.0
theme_override_styles/panel = SubResource("StyleBoxTexture_pitqy")

[node name="Label" type="Label" parent="Energy"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -5.0
offset_right = 49.5
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.53, 0.0901, 0.0901, 1)
theme_override_font_sizes/font_size = 14
text = "25|25"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
script = ExtResource("3_fw8gm")

[node name="NULL" type="Panel" parent="."]
material = SubResource("ShaderMaterial_amyoh")
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 341.0
offset_bottom = 36.0
theme_override_styles/panel = SubResource("StyleBoxTexture_2lp16")

[node name="HP_Segmented_Bar" type="Panel" parent="."]
material = SubResource("ShaderMaterial_04twu")
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 310.0
offset_bottom = 34.0
scale = Vector2(1.1, 1.1)
theme_override_styles/panel = SubResource("StyleBoxTexture_y2lb1")

[node name="ENG_Segmented_Bar" type="Panel" parent="."]
material = SubResource("ShaderMaterial_n7j5l")
layout_mode = 0
offset_left = 4.0
offset_top = 1.0
offset_right = 310.0
offset_bottom = 32.0
scale = Vector2(1.1, 1.1)
theme_override_styles/panel = SubResource("StyleBoxTexture_anayf")

[node name="Bar_Border" type="Panel" parent="."]
layout_mode = 0
offset_right = 313.0
offset_bottom = 35.0
scale = Vector2(1.1, 1.1)
theme_override_styles/panel = SubResource("StyleBoxTexture_k6ur1")

[node name="Action_remaining" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 356.0
offset_top = 18.0
offset_right = 440.0
offset_bottom = 65.0
theme_override_constants/separation = 23
